--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="bg-gray-200 dark:bg-stone-800">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
